--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
       <!-- Images Section -->
       <section class="images">
         <h3 class="überschrift3">Images Section</h3>
-        <div class="image"></div>
-        <img height="100vh" src="images/ocean.png" alt="Ocean" />
-        <img height="100vh" src="images/mountain.jpg" alt="Mountain" />
-        <img height="100vh" src="images/surfer.jpg" alt="Surfer" />
+        <div class="image">
+          <img height="100vh" src="images/ocean.png" alt="Ocean" />
+          <img height="100vh" src="images/mountain.jpg" alt="Mountain" />
+          <img height="100vh" src="images/surfer.jpg" alt="Surfer" />
+        </div>
       </section>
 
       <!-- Link Section -->
