--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <header>
       <h1>UI-Basics: First Test</h1>
     </header>
-
     <main>
       <!-- List Section -->
       <section class="list">
@@ -30,33 +29,35 @@
           <li class="link3">List Item</li>
         </ul>
       </section>
-
       <!-- Images Section -->
       <section class="images">
         <h3 class="überschrift3">Images Section</h3>
         <div class="image">
-          <img height="100vh" src="images/ocean.png" alt="Ocean" />
-          <img height="100vh" src="images/mountain.jpg" alt="Mountain" />
-          <img height="100vh" src="images/surfer.jpg" alt="Surfer" />
+          <img height="200" src="images/ocean.png" alt="Ocean" />
+          <img height="200" src="images/mountain.jpg" alt="Mountain" />
+          <img height="200" src="images/surfer.jpg" alt="Surfer" />
+          <a href="">
+            <img src="./images/tree.jpg" alt="" />
+          </a>
         </div>
       </section>
-
       <!-- Link Section -->
       <section class="links">
         <h3 class="überschrift3">Link Section</h3>
+        <ul>
+          <li>
+            <a
+              href="https://assets.thalia.media/img/artikel/0c907ac8c5aed55c3db8de5dcb115b3238f65b0f_BF2000-2000.jpeg"
+              target="blank"
+              >Mein Liblingsbock</a
+            >
+          </li>
+        </ul>
       </section>
 
       <!-- Box Model Section -->
       <section class="box-model">
         <h3 class="überschrift3">Box Model</h3>
-        <ul>
-          <li>
-            <a
-              href="https://assets.thalia.media/img/artikel/0c907ac8c5aed55c3db8de5dcb115b3238f65b0f_BF2000-2000.jpeg"
-              >Mein Liblingsbock</a
-            >
-          </li>
-        </ul>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
           necessitatibus ad quo aspernatur rerum est inventore ea porro placeat
