--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>UI-Basics Test</title>
     <link rel="stylesheet" href="./styles.css" />
-
     <style>
       /* default style for test */
       li {
@@ -14,7 +13,6 @@
       }
     </style>
   </head>
-
   <body>
     <header>
       <h1>UI-Basics: First Test</h1>
@@ -31,7 +29,7 @@
       </section>
       <!-- Images Section -->
       <section class="images">
-        <h3 class="überschrift3">Images Section</h3>
+        <h3>Images Section</h3>
         <div class="image">
           <img height="200" src="images/ocean.png" alt="Ocean" />
           <img height="200" src="images/mountain.jpg" alt="Mountain" />
@@ -43,7 +41,7 @@
       </section>
       <!-- Link Section -->
       <section class="links">
-        <h3 class="überschrift3">Link Section</h3>
+        <h3>Link Section</h3>
         <ul>
           <li>
             <a
@@ -54,7 +52,6 @@
           </li>
         </ul>
       </section>
-
       <!-- Box Model Section -->
       <section class="box-model">
         <h3 class="überschrift3">Box Model</h3>
